src/test/deca/context/valid/inst_float.deca
// Description :
// test d'une expression flottante
//
// Résultats :
// ok

{
  5.0;
}
